--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
 		<script src="js/jquery-1.8.3.min.js"></script>
 		<script src="js/jquery.mobile-1.3.2.min.js"></script>
+    	<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
 		<script type="text/javascript" src="js/maps.js"></script>
 
 		<title>Metro</title>
